--- a/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/logs.xml
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/logs.xml
@@ -3,7 +3,8 @@
         <field>
             <target>main</target>
             <type>bootgrid</type>
-            <style>log</style>
+            <style></style>
+            <class>logs</class>
             <columns>
                 <column id="line">/var/log/dnscrypt-proxy/main.log</column>
             </columns>
@@ -27,7 +28,8 @@
         <field>
             <target>query</target>
             <type>bootgrid</type>
-            <style>log</style>
+            <style></style>
+            <class>logs</class>
             <columns>
                 <column id="line">/var/log/dnscrypt-proxy/query.log</column>
             </columns>
@@ -52,7 +54,8 @@
         <field>
             <target>nx</target>
             <type>bootgrid</type>
-            <style>log</style>
+            <style></style>
+            <class>logs</class>
             <columns>
                 <column id="line">/var/log/dnscrypt-proxy/nx.log</column>
             </columns>
@@ -77,7 +80,8 @@
         <field>
             <target>blocked-names</target>
             <type>bootgrid</type>
-            <style>log</style>
+            <style></style>
+            <class>logs</class>
             <columns>
                 <column id="line">/var/log/dnscrypt-proxy/blocked-names.log</column>
             </columns>
@@ -102,7 +106,8 @@
         <field>
             <target>blocked-ips</target>
             <type>bootgrid</type>
-            <style>log</style>
+            <style></style>
+            <class>logs</class>
             <columns>
                 <column id="line">/var/log/dnscrypt-proxy/blocked-ips.log</column>
             </columns>
@@ -127,7 +132,8 @@
         <field>
             <target>allowed-names</target>
             <type>bootgrid</type>
-            <style>log</style>
+            <style></style>
+            <class>logs</class>
             <columns>
                 <column id="line">/var/log/dnscrypt-proxy/allowed-names.log</column>
             </columns>
@@ -152,7 +158,8 @@
         <field>
             <target>allowed-ips</target>
             <type>bootgrid</type>
-            <style>log</style>
+            <style></style>
+            <class>logs</class>
             <columns>
                 <column id="line">/var/log/dnscrypt-proxy/allowed-ips.log</column>
             </columns>
