--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/templates/OPNsense/Dnscryptproxy/dnscrypt-proxy.toml.jinja
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/templates/OPNsense/Dnscryptproxy/dnscrypt-proxy.toml.jinja
@@ -368,7 +368,7 @@ cache = false
 {%      endif %}
 {%  endif -%}
 
-{%  if cfg['nx_logging'] == '1' %}
+{%  if cfg['nx_log']['enabled'] == '1' %}
 
 ################################################################################
 #       Suspicious queries logging                                             #
